# Graduate

./: .gitignore  README.md  pyproject.toml
data/isu/: .gitignore
graduate/: __init__.py  catalog.py
graduate/assets/isu/: catalog.csv  raw.txt
scripts/: isu_catalog.py  isu_graph.py
